[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Brian McDonald <bmcdonald916@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"

[[bin]]
name = "day-01"
path = "src/day-01.rs"

[[bin]]
name = "day-02"
path = "src/day-02.rs"

[[bin]]
name = "day-03"
path = "src/day-03.rs"

[[bin]]
name = "day-04"
path = "src/day-04.rs"

[[bin]]
name = "day-05"
path = "src/day-05.rs"
